--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindPlugin": "git+https://github.com/KhoiAdvocado/tailwind-plugins.git"
+    "tailwindPlugin": "git+https://github.com/KhoiAdvocado/tailwind-plugins.git#1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
